[ GEDA-28 ] Add Dto to MAP assembler instance to replace DTOHelper reflection functionality with byte code